--- a/.dockerignore
+++ b/.dockerignore
@@ -1,41 +1,32 @@
-
-# Docker Linter
-.dockerfilelintrc
-.secrets.baseline
-
 # Git
 .git
 .gitignore
-.gitattributes
 
 # Node
 node_modules
 npm-debug.log
-yarn-debug.log
 yarn-error.log
-lerna-debug.log
 
-# Next.js build outputs
-.next/
-out/
+# Next.js
+.next
+out
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Build artifacts
+dist
+build
 
-# Capacitor
-android/
-ios/
+# Environment files (should be managed by the deployment platform)
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Environment files (if not intended to be baked into the image)
-# .env
-# .env*.local
-
-# OS-specific
+# OS generated files
 .DS_Store
 Thumbs.db
+
+# IDE specific
+.vscode
+*.swp
+*.swo
