--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "concurrently \"next start -p 3000\" \"genkit start --port 3400 --tsx src/ai/dev.ts\"",
+    "start": "concurrently --kill-others --names \"NEXT,GENKIT\" \"node ./server.js -p 3000\" \"genkit start --port 3400 --tsx src/ai/dev.ts\"",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "cap:sync:android": "npm run build && npx cap sync android",
-    "cap:open:android": "npx cap open android"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@capacitor/android": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
@@ -43,6 +39,8 @@
     "@tanstack/react-query": "^5.66.0",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.20.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.20.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
@@ -51,21 +49,19 @@
     "firebase": "^11.7.0",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.3.2",
+    "next": "15.2.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
-    "serve": "^14.2.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.16.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@capacitor/cli": "^6.0.0",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^20",
     "@types/prop-types": "^15.7.12",
