--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "concurrently --kill-others --names \"NEXT,GENKIT\" \"node ./server.js -p 3000\" \"genkit start --port 3400 --tsx src/ai/dev.ts\"",
+    "start": "concurrently --kill-others --names \"NEXT,GENKIT\" \"node ./server.js -p 3000\" \"npx genkit start --port 3400 --tsx src/ai/dev.ts\"",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
@@ -48,6 +48,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.7.0",
     "genkit": "^1.8.0",
+    "genkit-cli": "^1.8.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
@@ -67,7 +68,6 @@
     "@types/prop-types": "^15.7.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
