--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -8,7 +7,7 @@
     "genkit:dev": "node ./node_modules/genkit-cli/bin/genkit.js start --tsx src/ai/dev.ts",
     "genkit:watch": "node ./node_modules/genkit-cli/bin/genkit.js start --tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "npx concurrently --kill-others --names \"NEXT,GENKIT\" \"node ./standalone-server/server.js -p 3000\" \"node ./node_modules/genkit-cli/bin/genkit.js start --port 3400 --tsx src/ai/dev.ts\"",
+    "start": "concurrently --kill-others --names \"NEXT,GENKIT\" \"node ./standalone-server/server.js -p 3000\" \"node ./node_modules/genkit-cli/bin/genkit.js start --port 3400 --tsx src/ai/dev.ts\"",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
