--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: assistive-visions # Or your preferred service name
+    name: assistive-seeing-eyes # Or your preferred service name
     runtime: docker
     dockerfilePath: ./Dockerfile # Path to your Dockerfile
     envVars:
@@ -29,4 +29,4 @@ services:
     #   ignoredPaths:
     #     - "README.md"
 
-AIzaSyDrnk2NEr-OwEM04CnXGsex9_OUX9Yf2CU
+#AIzaSyDrnk2NEr-OwEM04CnXGsex9_OUX9Yf2CU
