--- a/render.yaml
+++ b/render.yaml
@@ -11,8 +11,8 @@ services:
         value: production
       - key: NEXT_PUBLIC_GENKIT_API_BASE_URL
         value: /genkit-api # Client will call this relative path for the integrated Genkit API
-      - key: GOOGLE_API_KEY
-        value: AIzaSyDrnk2NEr-OwEM04CnXGsex9_OUX9Yf2CU # API Key directly in the file (Security Warning!)
+      - key: GOOGLE_API_KEY # Your Genkit API key
+        sync: false # IMPORTANT: Set the value in Render's dashboard, not from repo
     httpPort: 3000 # The port your Next.js app (served by standalone server.js) runs on inside the container
     healthCheckPath: / # Root of your Next.js app for health checks
     # Current strategy: Integrated deployment (Next.js frontend and Genkit backend in one service)
