--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,9 @@ services:
     name: assistive-seeing-eyes
     runtime: docker
     dockerfilePath: ./Dockerfile
-    region: oregon # Recommended for better latency (adjust as needed)
-    plan: free # Upgrade to 'starter' or higher for production
-    
+    region: oregon # Adjust based on user location
+    plan: free # Upgrade to 'starter' for production
+
     # Environment Configuration
     envVars:
       - key: NODE_ENV
@@ -18,45 +18,32 @@ services:
       - key: NEXT_PUBLIC_GENKIT_API_BASE_URL
         value: /genkit-api
       - key: NEXT_PUBLIC_GOOGLE_APPLICATION_CREDENTIALS
-        sync: false # Set in Render dashboard
+        sync: false # Set in Render dashboard (e.g., /data/credentials.json)
       - key: GOOGLE_API_KEY
-        sync: false
+        sync: false # Set in Render dashboard
       - key: GENKIT_PROJECT_ID
-        sync: false
-    
+        sync: false # Set in Render dashboard
+
     # Network Configuration
     httpPort: 3000
     healthCheckPath: /api/health
     autoDeploy: true
-    
+
     # Proxy Rules for Integrated Deployment
     rewrites:
       - source: /genkit-api/(.*)
         destination: http://localhost:3400/$1
         stripPath: true
-    
-    # Resource Allocation (adjust based on needs)
+
+    # Resource Allocation (upgrade for production)
     resources:
-      cpu: 0.25 # Shared
-      memoryGB: 0.5 # 512MB - upgrade for production
+      cpu: 0.25 # Consider 0.5 for starter plan
+      memoryGB: 0.5 # Consider 1GB for starter plan
       swapSizeMB: 512
-    
-    # Advanced Options
+
+    # Build and Disk
     buildCommand: npm install && npm run build
     disk:
       name: data
       mountPath: /data
-      sizeGB: 1 # For persistent storage if needed
-
-# Uncomment if using separate GenKit service:
-#  - type: web
-#    name: genkit-service
-#    runtime: docker
-#    dockerfilePath: ./Dockerfile
-#    envVars:
-#      - key: NODE_ENV
-#        value: production
-#      - key: PORT
-#        value: 3400
-#    command: npm run genkit:prod
-#    httpPort: 3400
+      sizeGB: 1 # Remove if not needed
