--- a/render.yaml
+++ b/render.yaml
@@ -18,7 +18,7 @@ services:
       - key: NEXT_PUBLIC_GENKIT_API_BASE_URL
         value: /genkit-api
       - key: NEXT_PUBLIC_GOOGLE_APPLICATION_CREDENTIALS
-        sync: false # Set in Render dashboard (e.g., /data/credentials.json)
+        sync: false # Set in Render dashboard (e.g., JSON content)
       - key: GOOGLE_API_KEY
         sync: false # Set in Render dashboard
       - key: GENKIT_PROJECT_ID
@@ -41,9 +41,5 @@ services:
       memoryGB: 0.5 # Consider 1GB for starter plan
       swapSizeMB: 512
 
-    # Build and Disk
+    # Build
     buildCommand: npm install && npm run build
-    disk:
-      name: data
-      mountPath: /data
-      sizeGB: 1 # Remove if not needed
