--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
-{
-  "name": "nextn",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start --tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start --tsx --watch src/ai/dev.ts",
+    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
+    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -35,6 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.20.0",
@@ -53,19 +51,15 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
-    "typescript": "^5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
