--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
+  {
+  "name": "nextn",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
@@ -62,4 +65,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-}
+  }
